# skatepedia-api

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  scrapy.cfg  setup.cfg  setup.py  uwsgi.ini
scraper/: items.py  pipelines.py  settings.py  utils.py
scraper/commands/: krawl.py
scraper/spiders/: brands.py  companies.py  ranks.py  rss.py  skately.py  skaters.py  skatevideo.py  skatevideosite.py  soundtracks.py  theboard.py  videos.py
scripts/: skatevideosite.py
scripts/skately_dump/: brands.json
scripts/skatevideosite_dump/: videos_1.json  videos_10.json  videos_100.json  videos_101.json  videos_102.json  videos_103.json  videos_104.json  videos_105.json  videos_106.json  videos_107.json  videos_108.json  videos_109.json  videos_11.json  videos_110.json  videos_111.json  videos_112.json  videos_113.json  videos_114.json  videos_115.json  videos_116.json  videos_117.json  videos_118.json  videos_119.json  videos_12.json  videos_120.json  videos_121.json  videos_122.json  videos_123.json  videos_124.json  videos_125.json  videos_126.json  videos_127.json  videos_128.json  videos_129.json  videos_13.json  videos_130.json  videos_131.json  videos_132.json  videos_133.json  videos_134.json  (+115 more)
skatepedia/: celery.py  settings.py  urls.py  wsgi.py
skatepedia/api/: serializers.py  urls.py  views.py
skatepedia/archive/: apps.py  urls.py  views.py
skatepedia_api/: settings.py  urls.py  wsgi.py
(+19 files in other folders)
