[tool.poetry]
name = "skatepedia-api"
version = "0.1.0"
description = "API to scraped skateboarding database"
authors = ["Miguel Garcia Rodriguez <miguel.garciarod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
django-environ = "^0.4.5"
djangorestframework = "^3.12.2"
slugify = "^0.0.1"
scrapy-djangoitem = "^1.1.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
